--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -315,3 +315,4 @@ CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-filebrowser-go=y
 CONFIG_PACKAGE_luci-app-alist=y
+CONFIG_PACKAGE_luci-app-samba4=y
